public interface Publishable {
    void publish();
    void unpublish();
    boolean isPublished();
}